hphp/test/zend/good/Zend/tests/add_003.php.expectf
Fatal error: Uncaught exception 'TypecastException' with message 'Object of class stdClass could not be converted to int' in %s/add_003.php:8
Stack trace:
%A
